# lanista

./: .gitignore  README.md  lanista.py  model_notes.json  pyproject.toml
.claude/: settings.json
docs/: README.md  lanista-demo.md  lanista-scenarios.md  sweetspot-coding.md  workflows.md
docs/scenarios/: 01-cheap-bulk-classification.md  02-inline-completion.md  03-whole-repo-review.md  04-screenshot-to-code.md  05-chinese-support.md  06-long-horizon-agent.md  07-local-privacy.md  08-hard-math.md  09-creative-writing.md  10-pdf-qa.md  README.md
lanista/: __init__.py  __main__.py  aliases.py  cli.py  doctor.py  formatters.py  http.py  index.py  pareto.py  paths.py  picker.py  routing.py  source_base.py
lanista/data/: aliases.seed.json  artificial_analysis.seed.json  gkisokay.seed.json
lanista/opinions/: __init__.py  base.py  cache.py  eugeneyan.py  hn.py  willison.py
lanista/sources/: __init__.py  aider.py  artificial_analysis.py  factory_weather.py  gkisokay.py  litellm.py  lmarena.py  openrouter.py  pimono.py
sources/: llm_opinion_survey.md
sources/gkisokay/: 2026-04-17.extracted.json  README.md
tests/: test_aliases.py  test_doctor.py  test_formatters.py  test_lmarena.py  test_opinions.py  test_pareto.py  test_paths.py  test_picker.py  test_routing.py  test_sources.py
